# snes-3ds-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  oam_annotated.txt  oam_inspected.txt  run_tests.sh  usage.txt
docs/: tiles.md
examples/long_ago/: cgram.txt  oam.txt  vram.txt
examples/title_screen/: cgram.txt  oam.txt  vram.txt
ext/tclap/docs/html/: ArgContainer_8h.html  ArgContainer_8h_source.html  ArgException_8h.html  ArgException_8h_source.html  ArgGroup_8h.html  ArgGroup_8h_source.html  ArgTraits_8h.html  ArgTraits_8h_source.html  Arg_8h.html  Arg_8h_source.html  CmdLineInterface_8h.html  CmdLineInterface_8h_source.html  CmdLineOutput_8h.html  CmdLineOutput_8h_source.html  CmdLine_8h.html  CmdLine_8h_source.html  Constraint_8h.html  Constraint_8h_source.html  DeferDelete_8h.html  DeferDelete_8h_source.html  DocBookOutput_8h.html  DocBookOutput_8h_source.html  HelpVisitor_8h.html  HelpVisitor_8h_source.html  IgnoreRestVisitor_8h.html  IgnoreRestVisitor_8h_source.html  MultiArg_8h.html  MultiArg_8h_source.html  MultiSwitchArg_8h.html  MultiSwitchArg_8h_source.html  OptionalUnlabeledTracker_8h.html  OptionalUnlabeledTracker_8h_source.html  StandardTraits_8h.html  StandardTraits_8h_source.html  StdOutput_8h.html  StdOutput_8h_source.html  SwitchArg_8h.html  SwitchArg_8h_source.html  UnlabeledMultiArg_8h.html  UnlabeledMultiArg_8h_source.html  (+156 more)
source/: CMakeLists.txt  background.c  background.h  cgram.c  cgram.h  oam.c  oam.h  palette.h  ppu.h  snes.c  snes.h  snes_to_3ds.c  snes_to_3ds.h  sprite.c  sprite.h  texture.c  texture.h  tile.c  tile.h  tilemap.c  tilemap.h  usage.hpp  utility.h  version.cpp.in  version.hpp
tests/: CMakeLists.txt  background_tests.cpp  cgram_bitmap_test.cpp  cgram_tests.cpp  example_test.cpp  palette_bitmap.hpp  palette_tests.cpp  snes_objects_tests.cpp  tile_tests.cpp  utility_tests.cpp
tools/: CMakeLists.txt  configure_usage.py  convert_hex_to_bin.py
tools/oam_inspector/: CMakeLists.txt  oam_inspector.cpp
tools/palette_bitmap/: CMakeLists.txt  palette_bitmap.cpp
tools/tileset_bitmap/: CMakeLists.txt  tileset_bitmap.cpp
